# phantomwire

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
phantomwire/: __init__.py
phantomwire/appsec/: __init__.py  http_headers.py  jwt_lint.py  tls_audit.py
phantomwire/cli/: __init__.py  main.py
phantomwire/core/: config.py  models.py  pipeline.py  registry.py  safemode.py  utils.py
phantomwire/dns/: __init__.py  resolv.py
phantomwire/net/: __init__.py  pcap.py
phantomwire/reporting/: __init__.py  jsonout.py  markdown.py  sarif.py
plugins/: example_plugin.py
tests/: conftest.py  test_http_headers.py  test_jwt_lint.py  test_pcap.py  test_safemode.py  test_tls_audit.py
